# FLIGHTED_public

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  env.yml  pyproject.toml  setup.cfg
Data/DHARMA_Models/: best_model.ckpt  flighted_fitnesses.csv  hparams.json
Data/FLIGHTED_Selection/: hparams.json
Data/TEV_Landscape/: TEV_mutated_sequence.fasta  TEV_wt_sequence.fasta
flighted/: common_utils.py  pretrained.py
flighted/featurization/: EVcoupling_config.txt  embeddings.py
flighted/flighted_inference/: flighted_models.py  flighted_trainers.py
flighted/landscape_inference/: landscape_datasets.py  landscape_models.py  landscape_trainers.py
hparam_files/: GB1_landscape_augmented_carp_600k.json  GB1_landscape_carp.json  GB1_landscape_carp_38M.json  GB1_landscape_carp_600k.json  GB1_landscape_cnn_carp.json  GB1_landscape_cnn_carp_600k.json  GB1_landscape_cnn_carp_76M.json  GB1_landscape_cnn_esm2.json  GB1_landscape_cnn_esm2_150m.json  GB1_landscape_cnn_esm2_35m.json  GB1_landscape_cnn_esm2_8m.json  GB1_landscape_cnn_one_hot.json  GB1_landscape_cnn_tape.json  GB1_landscape_esm2.json  GB1_landscape_esm2_150m.json  GB1_landscape_esm2_35m.json  GB1_landscape_esm2_8m.json  GB1_landscape_tape.json
notebooks/: FLIGHTED_DHARMA.ipynb  FLIGHTED_DHARMA_TEV_Benchmarking.ipynb  FLIGHTED_Selection.ipynb  FLIGHTED_Selection_GB1_Benchmarking.ipynb
scripts/FLIGHTED_DHARMA/: infer_fitness_from_dharma.py  train_dharma_model.py  train_landscape_model.py
scripts/FLIGHTED_selection/: infer_fitness_from_selection.py  selection_simulations.py  train_landscape_model.py  train_selection_model.py
src/: common_utils.py  pretrained.py
src/featurization/: embeddings.py
test/: test_common_utils.py  test_pretrained.py
(+14 files in other folders)
