[options.packages.find]
where=src

[tool:pytest]
addopts = --pylint -p no:warnings
markers =
    slow: marks tests as slow(deselect with '-m "not slow"')
    new: marks tests as new
    blasr: marks tests that require blasr or pbdagcon
norecursedirs = .git

[tool:isort]
profile = black

[pep8]
exclude = *.npy, *.cfg, *.md

[yapfignore]
ignore_patterns = ["*.npy", "*.cfg", "*.md"]

[yapf]
based_on_style = pep8

[flake8]
exclude = .git, scripts, notebooks
max-line-length = 1000
