[metadata]
name = flighted
version = 0.1
author = Vikram Sundar
author_email = vsundar@mit.edu
description = FLIGHTED, a machine learning method for inference of fitness landscapes from high-throughput experimental data.
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Homepage=https://github.com/vikram-sundar/FLIGHTED_public

[options]
packages = 
    flighted
    flighted.featurization
    flighted.flighted_inference
    flighted.landscape_inference
install_requires = 
    numpy
    scipy
    pandas
    scikit-learn
    matplotlib
    seaborn
    biopython
    pytest
    pytest-pylint
    torch
    black
    isort
    pre-commit
    pyro-ppl

[tool:pytest]
addopts = --pylint -p no:warnings
markers =
    slow: marks tests as slow(deselect with '-m "not slow"')
    new: marks tests as new
norecursedirs = .git

[tool:isort]
profile = black

[pep8]
exclude = *.npy, *.cfg, *.md

[yapfignore]
ignore_patterns = ["*.npy", "*.cfg", "*.md"]

[yapf]
based_on_style = pep8

[flake8]
exclude = .git, notebooks
max-line-length = 1000

